# StateS

./: .gitignore  CMakeLists.txt  Demo.SfsmS  README  README.md  README.txt  StateS.pro  art.qrc  known_bugs.txt  release_notes.txt  translations.qrc  upcoming_features.txt
art/: AUTHORS  AUTHORS.md  AUTHORS.txt  CMakeLists.txt  art.qrc
core/: machine.cpp  machineactuatorelement.cpp  machineelement.cpp  main.cpp  states.cpp  statesxmlanalyzer.cpp
core/basic_type/: logicvalue.cpp  truthtable.cpp
core/exceptions/: statesexception.cpp
core/include/: machine.h  machineactuatorelement.h  machineelement.h  states.h  statesxmlanalyzer.h
core/machine/: actiononsignal.cpp  machine.cpp  machineactuatorcomponent.cpp  machinebuilder.cpp  machinecomponent.cpp  machineconfiguration.cpp  machineimageexporter.cpp  machinesavefilemanager.cpp  machinestatus.cpp  machinexmlparser.cpp  machinexmlwriter.cpp
core/signal/: constant.cpp  equation.cpp  inout.cpp  input.cpp  io.cpp  output.cpp  signal.cpp
core/simulation/: clock.cpp  fsmsimulator.cpp  machinesimulator.cpp
core/undo_engine/: diffundocommand.cpp  fsmundocommand.cpp  machineundocommand.cpp  undoredomanager.cpp
core/variables/: input.cpp  io.cpp  logicequation.cpp  logicvariable.cpp  logicvariablevector.cpp
fsm/: fsm.cpp  fsmelement.cpp  fsmstate.cpp  fsmtransition.cpp
fsm/include/: fsm.h  fsmelement.h  fsmstate.h  fsmtransition.h
packaging/: AppImageBuilder.yml
packaging/Linux/: AppImageBuilder.yml
packaging/Windows/: WindowsMetadata.rc  build_arch_mingw.sh
samples/: Burst.SfsmS  Demo.SfsmS
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  exceptiontypes.h  states.cpp  states.h  statestypes.h  statesxmlanalyzer.h
src/machine/: CMakeLists.txt
src/ui/: CMakeLists.txt  machinecomponentvisualizer.h  statesui.cpp  statesui.h
text/: CMakeLists.txt  code_guidelines.txt  known_bugs.txt  release_notes.txt  upcoming_features.txt
text/Readme/: README.txt
translations/: StateS_fr.qm  StateS_fr.ts  français.qm  français.ts  french.qm  french.ts  translations.qrc
ui/: centralwidget.cpp  contextmenu.cpp  displayarea.cpp  drawingwindow.cpp  drawingwindow.ui  imageexportdialog.cpp  imageexportoptions.cpp  langselectiondialog.cpp  langselector.cpp  machinecomponentvisualizer.cpp  rangeextractorwidget.cpp  reactivebutton.cpp  statesui.cpp  toolbar.cpp  truthtabledisplay.cpp  vhdlexportdialog.cpp  vhdlexportoptions.cpp
ui/dialogs/: errordisplaydialog.cpp  imageexportdialog.cpp  langselectiondialog.cpp  vhdlexportdialog.cpp
ui/display_area/: displayarea.cpp  drawingtoolbar.cpp  fsmdrawingtoolbar.cpp  maintoolbar.cpp  (+1 more)
(+772 files in other folders)
